--- a/SuperGameEngine/EngineEntry/EngineEntry.vcxproj.filters
+++ b/SuperGameEngine/EngineEntry/EngineEntry.vcxproj.filters
@@ -29,7 +29,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SuperGameEngine.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
