--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -13,38 +13,31 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Native">
+      <UniqueIdentifier>{21ffa9f7-c789-4759-912f-dfd7014a9514}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Native\Graphics">
+      <UniqueIdentifier>{6703a968-58e8-4af5-90d8-8bc0be8ed3b0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Native">
+      <UniqueIdentifier>{70ce70e0-472b-47fc-80f6-9f2bd504ecd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Native\Graphics">
+      <UniqueIdentifier>{a820dfd4-0496-4bff-9760-0a658e9b16ca}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineEntry.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Native\Graphics\Texture.cpp">
+      <Filter>Source Files\Native\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="EngineEntry.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="small.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="EngineEntry.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
+    <ClInclude Include="Native\Graphics\Texture.h">
+      <Filter>Header Files\Native\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="LibraryIncludes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
