--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -1,42 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Native">
-      <UniqueIdentifier>{21ffa9f7-c789-4759-912f-dfd7014a9514}</UniqueIdentifier>
+    <Filter Include="Project Files">
+      <UniqueIdentifier>{23faad6a-9996-46c2-97d6-3252a09c99d1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Native\Graphics">
-      <UniqueIdentifier>{6703a968-58e8-4af5-90d8-8bc0be8ed3b0}</UniqueIdentifier>
+    <Filter Include="Project Files\Native">
+      <UniqueIdentifier>{a22b249e-709c-434e-9e8a-b7e296771c0c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Native">
-      <UniqueIdentifier>{70ce70e0-472b-47fc-80f6-9f2bd504ecd3}</UniqueIdentifier>
+    <Filter Include="Project Files\Native\Graphics">
+      <UniqueIdentifier>{d048ad31-d572-4390-b9a8-eb1b3e5a3ecb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Native\Graphics">
-      <UniqueIdentifier>{a820dfd4-0496-4bff-9760-0a658e9b16ca}</UniqueIdentifier>
+    <Filter Include="Project Files\Native\Graphics\API">
+      <UniqueIdentifier>{10c9ad40-1aa5-4cf7-9b01-b7f7199dd71c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Structural">
+      <UniqueIdentifier>{1304aec7-3d3b-4bb4-843d-cd76a48c1099}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Structural\Scene">
+      <UniqueIdentifier>{70fe1487-d485-41b7-969e-19044611b783}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Structural\Scene\API">
+      <UniqueIdentifier>{98fa3ba9-3f10-444f-a014-1dd5f4343076}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Native\Graphics\Texture.cpp">
-      <Filter>Source Files\Native\Graphics</Filter>
+      <Filter>Project Files\Native\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Structural\Scene\GrandScene.cpp">
+      <Filter>Project Files\Structural\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Native\Graphics\Texture.h">
-      <Filter>Header Files\Native\Graphics</Filter>
+      <Filter>Project Files\Native\Graphics\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Structural\Scene\GrandScene.h">
+      <Filter>Project Files\Structural\Scene\API</Filter>
     </ClInclude>
     <ClInclude Include="LibraryIncludes.h">
-      <Filter>Header Files</Filter>
+      <Filter>Project Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
