--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -8,15 +8,6 @@
     <Filter Include="Project Files">
       <UniqueIdentifier>{23faad6a-9996-46c2-97d6-3252a09c99d1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Project Files\Native">
-      <UniqueIdentifier>{a22b249e-709c-434e-9e8a-b7e296771c0c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Project Files\Native\Graphics">
-      <UniqueIdentifier>{d048ad31-d572-4390-b9a8-eb1b3e5a3ecb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Project Files\Native\Graphics\API">
-      <UniqueIdentifier>{10c9ad40-1aa5-4cf7-9b01-b7f7199dd71c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Project Files\Structural">
       <UniqueIdentifier>{1304aec7-3d3b-4bb4-843d-cd76a48c1099}</UniqueIdentifier>
     </Filter>
@@ -26,25 +17,58 @@
     <Filter Include="Project Files\Structural\Scene\API">
       <UniqueIdentifier>{98fa3ba9-3f10-444f-a014-1dd5f4343076}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Project Files\Native\Basic">
+    <Filter Include="Project Files\Structural\GameObject">
+      <UniqueIdentifier>{b811bbc6-4392-42d3-b64b-0a1d2a8555b3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Structural\GameObject\API">
+      <UniqueIdentifier>{15ce3be7-61c3-4c17-9acb-1a6cbb0bbb28}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine">
+      <UniqueIdentifier>{a22b249e-709c-434e-9e8a-b7e296771c0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Graphics">
+      <UniqueIdentifier>{d048ad31-d572-4390-b9a8-eb1b3e5a3ecb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Graphics\API">
+      <UniqueIdentifier>{10c9ad40-1aa5-4cf7-9b01-b7f7199dd71c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Basic">
       <UniqueIdentifier>{54243b29-21b3-4537-9398-700a39f8e9e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Basic\API">
+      <UniqueIdentifier>{b18da3ef-35fd-4885-9c6f-b16268cf1497}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Content">
+      <UniqueIdentifier>{99ad6c37-35bd-487b-9a14-959b37296d17}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Engine\Content\API">
+      <UniqueIdentifier>{104ce86b-707b-4e7d-b495-a9cfed3f9402}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Native\Graphics\Texture.cpp">
-      <Filter>Project Files\Native\Graphics</Filter>
-    </ClCompile>
     <ClCompile Include="Structural\Scene\GrandScene.cpp">
       <Filter>Project Files\Structural\Scene</Filter>
     </ClCompile>
     <ClCompile Include="Structural\Scene\Scene.cpp">
       <Filter>Project Files\Structural\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Structural\GameObject\GameObject.cpp">
+      <Filter>Project Files\Structural\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Graphics\Texture.cpp">
+      <Filter>Project Files\Engine\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Structural\Scene\SceneLoadPackage.cpp">
+      <Filter>Project Files\Structural\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Graphics\SuperTexture.cpp">
+      <Filter>Project Files\Engine\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Content\ContentManager.cpp">
+      <Filter>Project Files\Engine\Content</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Native\Graphics\Texture.h">
-      <Filter>Project Files\Native\Graphics\API</Filter>
-    </ClInclude>
     <ClInclude Include="Structural\Scene\GrandScene.h">
       <Filter>Project Files\Structural\Scene\API</Filter>
     </ClInclude>
@@ -54,8 +78,23 @@
     <ClInclude Include="Structural\Scene\Scene.h">
       <Filter>Project Files\Structural\Scene\API</Filter>
     </ClInclude>
-    <ClInclude Include="Native\Basic\GameTime.h">
-      <Filter>Project Files\Native\Basic</Filter>
+    <ClInclude Include="Structural\GameObject\GameObject.h">
+      <Filter>Project Files\Structural\GameObject\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Graphics\Texture.h">
+      <Filter>Project Files\Engine\Graphics\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Structural\Scene\SceneLoadPackage.h">
+      <Filter>Project Files\Structural\Scene\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Basic\GameTime.h">
+      <Filter>Project Files\Engine\Basic</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Graphics\SuperTexture.h">
+      <Filter>Project Files\Engine\Graphics\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Content\ContentManager.h">
+      <Filter>Project Files\Engine\Content\API</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
