--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj.filters
@@ -26,6 +26,15 @@
     <Filter Include="Project Files\Time\API">
       <UniqueIdentifier>{94dfcdd2-b591-441d-b81b-57c7abed830f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Project Files\Collection">
+      <UniqueIdentifier>{d794e331-05e1-4e7c-ad34-045b5db77c26}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Collection\Vector">
+      <UniqueIdentifier>{ea0440d1-6477-487c-89a8-37fab36051da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Project Files\Collection\Vector\API">
+      <UniqueIdentifier>{9f01c763-b563-44a6-b61a-22d7bd3bb821}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Text/FString.h">
@@ -37,6 +46,9 @@
     <ClInclude Include="Time\Timespan.h">
       <Filter>Project Files\Time\API</Filter>
     </ClInclude>
+    <ClInclude Include="Collection\Vector\VectorHelpers.h">
+      <Filter>Project Files\Collection\Vector\API</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Text/FString.cpp">
@@ -47,6 +59,9 @@
     </ClCompile>
     <ClCompile Include="Time\Timespan.cpp">
       <Filter>Project Files\Time</Filter>
+    </ClCompile>
+    <ClCompile Include="Collection\Vector\VectorHelpers.cpp">
+      <Filter>Project Files\Collection\Vector</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
