--- a/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/StandardCLibrary/StandardCLibrary.vcxproj
@@ -129,12 +129,16 @@
   <ItemGroup>
     <ClInclude Include="Collection\Vector\VectorHelpers.h" />
     <ClInclude Include="File\File.h" />
+    <ClInclude Include="Structural\FPoint.h" />
+    <ClInclude Include="Structural\FVector2D.h" />
     <ClInclude Include="Text/FString.h" />
     <ClInclude Include="Time\Timespan.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Collection\Vector\VectorHelpers.cpp" />
     <ClCompile Include="File\File.cpp" />
+    <ClCompile Include="Structural\FPoint.cpp" />
+    <ClCompile Include="Structural\FVector2D.cpp" />
     <ClCompile Include="Text/FString.cpp" />
     <ClCompile Include="Time\Timespan.cpp" />
   </ItemGroup>
